# datasquare

./: .gitignore  Datasquare_Llama.ipynb  README.md  main.py  manage.py  pyproject.toml  requirements.txt  run_datasquare.sh  token_input.exp
app/: database.py  env  main.py
app/crud/: feed.py  feed_crud.py  issue_comment_crud.py  issue_crud.py  noti.py  org.py  team_crud.py  user_crud.py
app/models/: DataSquare_llm.ipynb  Datasquare_Llama.ipynb  database.py  datawquare_llm_prompting.ipynb  dsdb.db  issue.py  org.py  organization.py  profile.py
app/routers/: admin.py  data_request.py  database_router.py  feed.py  issue_comment.py  issue_publish.py  issue_view.py  org.py  profile.py  sign.py
app/schemas/: data_request.py  issue.py  issue_comment.py  org.py  user_schema.py
app/services/: llm.py
app/templates/: admin_base.html  base.html  feed.html  issue_publish.html  issue_view.html  sign_in.html  sign_up.html  success.html
app/tests/: test_feed.py  test_main.py
app/utils/: docsim.py  errer_handlers.py  error_handlers.py  get_current_user.py  key_scribe.py  llm.py  org.py  prompts.py  template.py  time.py
datasquare/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: 404.css  admin_settings.css  components.css  db_info.css  feed.css  footer.css  forms.css  header.css  issue_view.css  layout.css  layouts.css  main.css  notifications.css  profile_edit.css  profile_view.css  sign_in.css  sign_up.css  styles.css  success.css  team_profile_edit.css  team_profile_view.css
templates/: base.html  feed.html  footer.html  header.html  iss_feed.html
(+91 files in other folders)
